<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/hidden_contact_item_root" android:paddingTop="8.0dp" android:paddingBottom="8.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="58.0dp" android:paddingStart="10.0dp" android:paddingEnd="10.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@color/dy_feed_text_primary" android:ellipsize="end" android:id="@id/hidden_contact_item_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hidden_contact_item_name" android:maxLines="1" />
        <TextView android:textSize="11.0sp" android:textColor="@color/dy_feed_text_secondary" android:ellipsize="middle" android:id="@id/hidden_contact_item_identity" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/hidden_contact_item_uid" android:maxLines="1" />
    </LinearLayout>
    <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@color/dy_feed_green" android:id="@id/hidden_contact_item_action" android:paddingTop="4.0dp" android:paddingBottom="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hidden_contact_item_add" android:includeFontPadding="false" android:paddingStart="8.0dp" android:paddingEnd="8.0dp" android:layout_marginStart="8.0dp" />
</LinearLayout>
